--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="provinsi"></div>
     <div id="kecamatan"></div>
     <div id="longitude"></div>
-    <div id="latitude"></div>
+    <div id="latitut"></div>
 
     <script>
     function getWeather(lokasi) {
@@ -46,7 +46,7 @@
                 document.getElementById("provinsi").innerHTML = `Provinsi: ${data.location.region}`;
                 document.getElementById("kecamatan").innerHTML = `Kecamatan: ${data.location.name}`;
                 document.getElementById("longitude").innerHTML = `Longitude: ${data.location.lon}`;
-                document.getElementById("latitude").innerHTML = `Latitude: ${data.location.lat}`;
+                document.getElementById("latitut").innerHTML = `Latitut: ${data.location.lat}`;
                 document.getElementById("lokasi").value = data.location.name;
             },
             error: function(error) {
