--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             success: function(data) {
                 console.log(data);
                 
-                document.getElementById("suhu").innerHTML = `Suhu Celcius: ${data.current.temp_c}°C`;
+                document.getElementById("suhu").innerHTML = `Celcius: ${data.current.temp_c}°C`;
                 document.getElementById("suhuf").innerHTML = `Suhu Fahrenheit: ${data.current.temp_f}°F`;
                 document.getElementById("kelembapan").innerHTML = `Kelembapan: ${data.current.humidity}%`;
                 document.getElementById("negara").innerHTML = `Negara: ${data.location.country}`;
