mengganti nama suhu fahreheit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 console.log(data);
                 
                 document.getElementById("suhu").innerHTML = `Celcius: ${data.current.temp_c}°C`;
-                document.getElementById("suhuf").innerHTML = `Suhu Fahrenheit: ${data.current.temp_f}°F`;
+                document.getElementById("suhuf").innerHTML = `Fahrenheit: ${data.current.temp_f}°F`;
                 document.getElementById("kelembapan").innerHTML = `Kelembapan: ${data.current.humidity}%`;
                 document.getElementById("negara").innerHTML = `Negara: ${data.location.country}`;
                 document.getElementById("provinsi").innerHTML = `Provinsi: ${data.location.region}`;
