menambah detail pada lokasi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="kelembapan"></div>
     <hr>
 
-    <h2>Lokasi</h2>
+    <h2>Lokasi Detail</h2>
     <div id="negara"></div>
     <div id="provinsi"></div>
     <div id="kecamatan"></div>
